--- a/package.json
+++ b/package.json
@@ -22,22 +22,36 @@
   },
   "homepage": "https://github.com/YingQQQ/webpack-react#readme",
   "devDependencies": {
+    "autoprefixer": "^6.5.3",
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.8",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-plugin-typecheck": "^3.9.0",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-react-hmre": "^1.1.1",
     "clean-webpack-plugin": "^0.1.14",
     "css-loader": "^0.26.1",
+    "eslint": "^3.11.1",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-react": "^6.8.0",
+    "expose-loader": "^0.7.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.24.1",
+    "node-sass": "^3.13.0",
+    "purifycss-webpack-plugin": "^2.0.3",
     "react-hot-loader": "^3.0.0-beta.6",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.3"
+    "webpack": "^1.13.3",
+    "webpack-isomorphic-tools": "^2.6.4",
+    "webpack-merge": "^1.0.2",
+    "webpack-validator": "^2.2.11"
   },
   "dependencies": {
+    "koa": "^2.0.0-alpha.7",
     "react": "^15.4.1",
     "react-dom": "^15.4.1"
   }
