--- a/.eslintrc
+++ b/.eslintrc
@@ -20,7 +20,11 @@
     "import/no-extraneous-dependencies": "off",
     "func-names": "off",
     "react/jsx-filename-extension": "off",
-    "global-require":"off"
+    "global-require":"off",
+    "object-shorthand":"off",
+    "arrow-body-style":"off",
+    "consistent-return":"off",
+    "prefer-arrow-callback":"off"
   },
   "plugins": [
     "react", "import"
