--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "webpack react",
   "main": "webpack.config.js",
   "scripts": {
-    "start": "set NODE_ENV=development & node ./bin/start",
-    "build": "webpack",
-    "dev": "set NODE_ENV=development & node ./bin/test "
+    "start": "node ./bin/start",
+    "dev": "webpack-dev-server --config ./tools/webpack.development"
   },
   "repository": {
     "type": "git",
@@ -46,11 +45,13 @@
     "node-sass": "^3.13.0",
     "postcss-loader": "^1.2.0",
     "purifycss-webpack-plugin": "^2.0.3",
+    "react-addons-perf": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.6",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.3",
+    "webpack-dev-server": "^1.16.2",
     "webpack-isomorphic-tools": "^2.6.4",
     "webpack-merge": "^1.0.2",
     "webpack-validator": "^2.2.11"
@@ -66,7 +67,13 @@
     "koa-bodyparser": "^3.2.0",
     "koa-router": "^7.0.1",
     "koa-static": "^3.0.0",
+    "koa-views": "^5.2.0",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-redux": "^4.4.6",
+    "react-router": "^3.0.0",
+    "react-router-redux": "^4.0.7",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   }
 }
