--- a/.babelrc
+++ b/.babelrc
@@ -2,13 +2,13 @@
     "presets": ["react", "es2015", "stage-0"],
     "plugins": [
         "transform-runtime",
-        "add-module-exports"
+        "add-module-exports",
+        "react-hot-loader/babel"
     ],
     "env": {
         "start": {
             "plugins": [
-                "typecheck",
-                "react-hot-loader/babel"
+                "typecheck"
             ]
         }
     }
